# cyber-agent-engine

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.gpu  EN_AGENTS.md  EN_README.md  MANIFEST.in  README.fr.md  README.md  conftest.py  docker-compose.yml  policy.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/workflows/: ci.yml  release.yml
agents/: README.md  __init__.py  base.py  classifier.py  coercion.py  contracts.py  crowdsec_agent.py  errors.py  infer_wiring.py  manifest.py  models.py  ner_extractor.py  opnsense_agent.py  opnsense_agent_reference.py  pfsense_agent.py  router_agent.py  stormshield_agent.py  tool_agents.py  validation.py  wireguard_agent.py
agents/anony/: __init__.py  agent.py
agents/anony/config/: custom_rules_security.json
agents/manifests/: crowdsec.yml  opnsense.yml  wireguard.yml
agents/opnsense/: __init__.py  _aliases.py  _base.py  _config.py  _cron.py  _decorators.py  _diagnostics.py  _extended.py  _filters.py  _ids.py  _legacy.py  _monit.py  _nat.py  _routing.py  _traffic.py  _vpn.py
agents/prompts/: loader.py
agents/prompts/analyst/: correlation.yaml  system.yaml  threat_assessment.yaml
agents/prompts/investigator/: investigation.yaml  log_analysis.yaml  system.yaml
agents/prompts/pilot/: planning.yaml  routing.yaml  synthesis.yaml  system.yaml
agents/prompts/reporter/: executive_summary.yaml  incident_report.yaml  system.yaml  timeline.yaml
agents/prompts/responder/: response_planning.yaml  system.yaml
clients/: __init__.py  crowdsec_client.py  gpu.py  linux_sys_client.py  native_vllm_client.py  ollama_client.py  openai_compat_client.py  opnsense_api_client.py  pfsense_api_client.py  pfsense_client.py  tool_call_schema.py  wireguard_api_client.py  wireguard_linux_client.py
coordinator/: README.md  agent_call.py  app.py  assembly.py  catalog_builder.py  config.py  extractor.py  judge.py  loop.py  models.py  pilot.py  proposer.py  server.py  session.py  state.py
coordinator/clients/: tool_agent_client.py
coordinator/llm/: coordinator_llm.py
core/: decision.py  orchestrator.py
core/approval/: __init__.py  store.py
core/audit/: __init__.py  file_sink.py  sink.py
core/auth/: __init__.py  api_key.py
core/execution/: __init__.py  authorization.py  boundary.py
core/policy/: __init__.py  catalog.py  engine.py  loading.py  models.py
core/tokens/: __init__.py  vault.py
dashboard/: EN_README.md  README.md  app.py
dashboard/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
dashboard/frontend/src/: App.svelte  app.css
dashboard/frontend/src/lib/components/: AgentStatusView.svelte  ChatView.svelte  Header.svelte  LogView.svelte  NotificationDisplay.svelte  (+3 more)
dashboard/static/: index.html
dashboard/static/assets/: index-3fb80e0f.js  index-c8f35589.css
dashboard/templates/: index.html
docs/: audit-2026-07.md
docs/superpowers/plans/: 2026-07-22-assemblage-runtime.md  2026-07-22-cap-v2-coordinateur.md  2026-07-22-coeur-confiance-surete.md  2026-07-22-distribution-licence.md  2026-07-22-portabilite-modeles-runtime.md  2026-07-23-ci-release.md  2026-07-23-durcissement-exploitation.md  2026-07-23-i18n-inventory.md  2026-07-23-i18n-messages-runtime.md  2026-07-23-vitrine-blog-series-fr.md
docs/superpowers/specs/: 2026-07-22-assemblage-runtime-design.md  2026-07-22-cap-v2-coordinateur-design.md  2026-07-22-coeur-confiance-surete-design.md  2026-07-22-distribution-licence-design.md  2026-07-22-portabilite-modeles-runtime-design.md  2026-07-23-ci-release-design.md  2026-07-23-durcissement-exploitation-design.md  2026-07-23-i18n-messages-runtime-design.md  2026-07-23-vitrine-blog-series-design.md
tests/: test_ci_workflow.py  test_compose.py  test_dockerfile.py  test_dockerfile_gpu.py  test_entrypoint.py  test_license.py  test_lint_surface_consistency.py  test_packaging.py  test_portability.py  test_project_metadata.py  test_readme_accuracy.py  test_readme_bilingual.py  test_readme_ops.py  test_readme_release.py  test_release_workflow.py  test_runtime_messages_english.py  test_spdx_headers.py  test_wheel_packaging.py
tests/agents/: test_agent_server_health.py  test_agent_server_structured.py  test_coercion.py  test_contracts_cap_v2.py  test_execute_direct_coercion.py  test_infer_backend_selection.py  test_infer_wiring.py  test_manifest.py  test_no_silent_simulation.py
tests/clients/: test_gpu.py  test_openai_compat_client.py  test_tool_call_schema.py
tests/coordinator/: test_agent_call.py  test_app.py  test_assembly.py  test_assembly_real_agents.py  test_build_agent_clients.py  test_catalog_builder.py  test_config.py  test_create_default_app.py  test_e2e.py  test_extractor.py  test_llm_conformance.py  test_loop.py  test_loop_rule_reason.py  test_proposer.py  test_session.py
tests/core/: test_approval.py  test_audit.py  test_auth.py  test_decision.py  test_execution.py  test_file_sink.py  test_file_sink_rotation.py  test_orchestrator.py  test_policy_engine.py  test_policy_loading.py  test_tokens.py  test_vault_snapshot.py
(+6 files in other folders)
