[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-agent-engine"
version = "1.0.0"
description = "Autonomous factory component for LoRA generation and network agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
# Vérifie strictement le périmètre `files` ; n'émet PAS les erreurs des modules
# legacy suivis en import (dette pré-existante hors sous-projet B). Décision
# contrôleur analogue au gating ruff du sous-projet A.
follow_imports = "silent"
files = ["core"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
