[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-agent-engine"
version = "1.0.0"
description = "Autonomous factory component for LoRA generation and network agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "vllm>=0.6.0",
    "unsloth",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "clients*", "agents*", "coordinator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
# Vérifie strictement le périmètre `files` ; n'émet PAS les erreurs des modules
# legacy suivis en import (dette pré-existante hors sous-projet B). Décision
# contrôleur analogue au gating ruff du sous-projet A.
follow_imports = "silent"
files = ["core", "coordinator/agent_call.py", "coordinator/proposer.py",
         "coordinator/catalog_builder.py", "coordinator/session.py",
         "coordinator/loop.py", "coordinator/app.py",
         "agents/contracts.py", "agents/coercion.py", "agents/manifest.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
