[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-agent-engine"
version = "1.0.0"
description = "Trust-cored multi-agent network-security coordinator (fail-closed policy, PII tokenization, human approval)"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "patlegu", email = "patrice.leguyader@gmail.com" }]
keywords = ["security", "network", "llm-agents", "purple-team", "crowdsec", "opnsense", "wireguard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "requests>=2.31.0",
    "anthropic>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
cyber-coordinator = "coordinator.app:run"

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "vllm>=0.6.0",
    "unsloth",
]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=4,<7",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[project.urls]
Homepage = "https://github.com/patlegu/cyber-agent-engine"
Repository = "https://github.com/patlegu/cyber-agent-engine"
Issues = "https://github.com/patlegu/cyber-agent-engine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "clients*", "agents*", "coordinator*"]

[tool.setuptools.package-data]
agents = ["manifests/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
# Vérifie strictement le périmètre `files` ; n'émet PAS les erreurs des modules
# legacy suivis en import (dette pré-existante hors sous-projet B). Décision
# contrôleur analogue au gating ruff du sous-projet A.
follow_imports = "silent"
files = ["core", "coordinator/agent_call.py", "coordinator/proposer.py",
         "coordinator/catalog_builder.py", "coordinator/config.py",
         "coordinator/session.py",
         "coordinator/loop.py", "coordinator/app.py", "coordinator/extractor.py",
         "coordinator/assembly.py",
         "agents/contracts.py", "agents/coercion.py", "agents/manifest.py",
         "agents/infer_wiring.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
